<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_inventory_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.company.graduationproject.stocktakingsystem.InventoryTableActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="3"
        >

        <Button
            android:id="@+id/btnNewStockTaking"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_back_cata_lay"
            />
        <Button
            android:id="@+id/btnUpdateUndefinedBarcodes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_UndefinedStockTaking_AutoManipulation"

            />
        <Button
            android:id="@+id/btnBackToStockTakingActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="جرد جديد"
            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <RadioButton
                android:id="@+id/rbUnDefinedStockItems"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/title_undefined_stockTaking_items"
                />
            <RadioButton
                android:id="@+id/rbDefinedStockItems"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/title_defined_stockTaking_items"
                />

        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:id="@+id/etName_InventoryTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="أدخل اسم الصنف"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="3"

        >

        <TextView
            android:id="@+id/tvInventoryTableItemName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="الوحدة"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/tvInventoryTableItemQuantity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:text="الكمية"
            android:textColor="#000000"
            />
        <TextView
            android:text="اسم الصنف"
            android:id="@+id/tvInventoryTableUnit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:textColor="#000000"
            />



    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvInventoryTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        >
    </android.support.v7.widget.RecyclerView>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvUndefinedInventoryTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:visibility="gone"
        >
    </android.support.v7.widget.RecyclerView>

</LinearLayout>
